<resources>

<string name="app_name">SHDC</string>
<string name="prompt">Select</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="academicyear">Academic Year(YYYY-YYYY)</string>
<string name="btnSubmit">Submit</string>
<string name="btnSave">Save</string>
<string name="btnOk">OK</string>
<string name="btnSearch">Search</string>
<string name="btnCreate">Create</string>
<string name="tv_class">Program</string>
<string name="tv_stream">Stream</string>
<string name="tv_semester">Semester</string>
<string name="tv_section">Section</string>
<string name="tv_subject">Subject</string>
    <string name="tv_lecture_time">LectureTime</string>
    <string name="tv_lecture_type">LectureType</string>

<string name="tv_term">Term</string>
<string name="tv_assesment">Assesment</string>
<string name="tv_attendance">Attendance</string>
    <string name="tv_attendance_detail">Attendance Details</string>
<string name="tv_today_addendance">Today Attendance</string>
<string name="tv_mark_addendance">Mark Attendance</string>
<string name="tv_search_addendance">Search Attendance</string>
<string name="tv_class_addendance">Class Attendance</string>
<string name="tv_student_attendance">My Attendance</string>
<string name="tv_show_result">Class Result</string>
<string name="tv_result">My Result</string>
<string name="tv_mark_result">Mark Result</string>
<string name="tv_current_date">Date</string>
<string name="tv_from_date">From Date</string>
<string name="tv_to_date">To Date</string>
<string name="tv_select_date">Select Date</string>
<string name="tv_sno">S.No.</string>
<string name="tv_student_rollno">Roll No.</string>
<string name="tv_student_name">Student Name</string>
<string name="tv_student_marks">Marks</string>
<string name="tv_student_status">Status</string>
<string name="tv_student_status_present">Present</string>
<string name="tv_student_status_absent">Absent</string>
<string name="tv_student_present_day">Days</string>
<string name="tv_student_present_percentage">%age</string>
<string name="tv_total_day">Total Days</string>
<string name="tv_max_mark">Max. Marks</string>
<string name="tv_enter_mark">Enter Marks</string>
<string name="tv_timeTable">Time Table</string>
<string name="tv_lect_day">Lect/Time</string>
<string name="tv_day_monday">Monday</string>
<string name="tv_day_tuesday">Tuesday</string>
<string name="tv_day_wednesday">Wednesday</string>
<string name="tv_day_thrusday">Thrusday</string>
<string name="tv_day_friday">Friday</string>
<string name="tv_day_saturday">Saturday</string>
<string name="tv_to">To</string>
<string name="tv_circular_create">Create Circular</string>
<string name="tv_circular_view">View Circular</string>
<string name="tv_circular_title">Title</string>
<string name="tv_circular_subject">Subject</string>
<string name="tv_circular_content">Content</string>
<string name="et_circular_subject_write">Write Subject</string>
<string name="et_circular_content_write">Write Content</string>
    <string name="tv_total_lecture">Total Lecture</string>
    <string name="tv_percentage_attendance">Percentage</string>

</resources>
