<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_timeTable"
        android:typeface="serif"
        android:textColor="#0000ff"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/attendance_textView" />



        <LinearLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.8"
            android:padding = "5dp"
            android:text = "@string/tv_lect_day"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/tv_day_monday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/tv_day_tuesday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text ="@string/tv_day_wednesday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/tv_day_thrusday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/tv_day_friday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/tv_day_saturday"
            android:textStyle="bold"
            android:textSize="22sp"
            android:background = "@drawable/cell_shape"
            android:singleLine="true"
            android:gravity="center"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/listView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>