<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/serialNo"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:padding = "5dp"
        android:layout_weight="1"
        android:text = "@string/tv_sno"
        android:ellipsize = "end"
        android:background = "@drawable/cell_shape"
        android:singleLine="true"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/rollNo"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_weight="1.5"
        android:padding = "5dp"
        android:text = "@string/tv_student_rollno"
        android:ellipsize = "end"
        android:background = "@drawable/cell_shape"
        android:singleLine="true"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/student_name"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_weight="2.2"
        android:padding = "5dp"
        android:text = "@string/tv_student_name"
        android:ellipsize = "end"
        android:background = "@drawable/cell_shape"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_weight="1"
        android:padding = "5dp"
        android:text = "@string/tv_student_status"
        android:ellipsize = "end"
        android:background = "@drawable/cell_shape"
        android:singleLine="true"
        android:gravity="center"
        />

</LinearLayout>