<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e3e3e3"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/loginimage"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:id="@+id/imageView2" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/username"
                android:textSize="20sp"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/password"
                android:textSize="20sp"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <!--  <android.support.design.widget.TextInputLayout
              android:id="@+id/academicyearWrapper"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp">

              <EditText
                  android:id="@+id/academic_year"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:singleLine="true"
                  android:textSize="20sp"
                  android:hint="@string/academicyear"/>

          </android.support.design.widget.TextInputLayout>-->

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Remember me"
            android:textSize="20sp"/>

        <Button android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/btnSubmit"
            android:textColor="#fff"
            android:background="@drawable/btn"
            android:id="@+id/btn"
            />

    </LinearLayout>
    <include layout="@layout/footer"/>
</LinearLayout>
